# xcode-mcp-server

./: .gitignore  CLAUDE.md  README.md  TODO.md  _venv-setup.sh  deploy-beta.sh  deploy.sh  dev.sh  fools-errand.md  info.sh  pyproject.toml  run_local_for_claude.sh  xcode-mcp-server.py  xcode_mcp.py
.claude/: settings.local.json
dist-archive/: drews_xcode_mcp-1.3.16b1-py3-none-any.whl  drews_xcode_mcp-1.3.17-py3-none-any.whl  xcode_mcp_server-1.0.6-py3-none-any.whl  xcode_mcp_server-1.2.1-py3-none-any.whl  xcode_mcp_server-1.3.0b1-py3-none-any.whl  xcode_mcp_server-1.3.0b2-py3-none-any.whl  xcode_mcp_server-1.3.0b3-py3-none-any.whl  xcode_mcp_server-1.3.0b4-py3-none-any.whl  xcode_mcp_server-1.3.0b5-py3-none-any.whl  xcode_mcp_server-1.3.0b6-py3-none-any.whl  xcode_mcp_server-1.3.0b7-py3-none-any.whl  xcode_mcp_server-1.3.10-py3-none-any.whl  xcode_mcp_server-1.3.11b1-py3-none-any.whl  xcode_mcp_server-1.3.11b2-py3-none-any.whl  xcode_mcp_server-1.3.11b4-py3-none-any.whl  xcode_mcp_server-1.3.15-py3-none-any.whl  xcode_mcp_server-1.3.16b1-py3-none-any.whl  xcode_mcp_server-1.3.16b2-py3-none-any.whl  xcode_mcp_server-1.3.17-py3-none-any.whl  xcode_mcp_server-1.3.3-py3-none-any.whl  xcode_mcp_server-1.3.6-py3-none-any.whl  xcode_mcp_server-1.3.7-py3-none-any.whl  xcode_mcp_server-1.3.9-py3-none-any.whl
drews_xcode_mcp/: __init__.py  __main__.py  cli.py  config_manager.py  config_ui.py  security.py  server.py
shim/: README.md  pyproject.toml
shim/xcode_mcp_server/: __init__.py  __main__.py
tests/: test_basic.py  test_build_log_parser.py  test_manifest_wait.py  (+4 more)
(+84 files in other folders)
