[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xcode-mcp-server"
# The version and the drews-xcode-mcp pin below are rewritten in lockstep by
# deploy.sh so every release of the renamed package ships a matching shim.
version = "1.3.17"
description = "RENAMED to drews-xcode-mcp - this compatibility package forwards to it"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Andrew Benson", email = "db@nuclearcyborg.com"},
]
keywords = ["mcp", "xcode", "server"]
classifiers = [
    "Development Status :: 7 - Inactive",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "drews-xcode-mcp==1.3.17",
]

[project.scripts]
xcode-mcp-server = "xcode_mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["xcode_mcp_server"]

[project.urls]
Homepage = "https://github.com/drewster99/drews-xcode-mcp"
Repository = "https://github.com/drewster99/drews-xcode-mcp"
Issues = "https://github.com/drewster99/drews-xcode-mcp/issues"
